tests/negative/neg_rule2_empty.safe
-- Test: neg_rule2_empty
-- Description: Accessing an element of a potentially empty array.
--   When the array has a dynamic length that may be zero, accessing
--   index 1 is not provably within bounds.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.2.p131:30aba5f5
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.2.p132:8613ecf4
-- Expected: REJECT index_out_of_bounds

package empty_array_test

   type element is range 0 to 255;
   type index is range 1 to 100;
   type flex_array is array (index range <>) of element;

   --  First_Element: attempts to access the first element.
   --  If Arr is empty (Arr.Length = 0), there is no element at index 1.
   function first_element (arr : flex_array) returns element

      return arr (1);  -- ERROR: Arr may be empty

